<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        tools:ignore="RtlSymmetry">

        <RadioButton
            android:id="@+id/radio_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingStart="16dp"
            android:text="@string/stitch_mode_scans" />

        <RadioButton
            android:id="@+id/radio_panorama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/stitch_mode_panorama" />

    </RadioGroup>

    <TextView
        android:id="@+id/inputFramesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_frames_value"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/inputFrames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:text="0.5"
        android:digits="1,2,3,4,5,6,7,8,9,.,0"
        android:hint="@string/only_numbers_allowed"/>

    <Button
        android:id="@+id/buttonVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/pick_images_videos_for_frames" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/pick_images_button" />


    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside" />

</LinearLayout>
